added bg colour to chatpage

--- a/app/globals.css
+++ b/app/globals.css
@@ -19,3 +19,9 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.chat-bg {
+  background-image: url("/tile_background[1].png");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
